syntax = "proto2"; 
package org.kie.kogito.app; 
import "kogito-types.proto";

message Address { 
	option java_package = "org.acme.travels";
	optional string city = 1; 
	optional string country = 2; 
	optional string street = 3; 
	optional string zipCode = 4; 
}
message Flight { 
	option java_package = "org.acme.travels";
	optional kogito.Date arrival = 1; 
	optional kogito.Date departure = 2; 
	optional string flightNumber = 3; 
	optional string gate = 4; 
	optional string seat = 5; 
}
message Hotel { 
	option java_package = "org.acme.travels";
	optional Address address = 1; 
	optional string bookingNumber = 2; 
	optional string name = 3; 
	optional string phone = 4; 
	optional string room = 5; 
}
message Traveller { 
	option java_package = "org.acme.travels";
	optional Address address = 1; 
	optional string email = 2; 
	optional string firstName = 3; 
	optional string lastName = 4; 
	optional string nationality = 5; 
}
message Trip { 
	option java_package = "org.acme.travels";
	optional kogito.Date begin = 1; 
	optional string city = 2; 
	optional string country = 3; 
	optional kogito.Date end = 4; 
	optional bool visaRequired = 5; 
}
message VisaApplication { 
	option java_package = "org.acme.travels";
	optional bool approved = 1; 
	optional string city = 2; 
	optional string country = 3; 
	optional int32 duration = 4; 
	optional string firstName = 5; 
	optional string lastName = 6; 
	optional string nationality = 7; 
	optional string passportNumber = 8; 
}
